fixed footer alignment

--- a/Savsstyle.css
+++ b/Savsstyle.css
@@ -559,12 +559,12 @@ button:hover, .submitBtn:hover {
     .nav-footer {
         gap: 1rem;
         flex-direction: column;
-        align-items: center;
+        align-items: left;
     }
     
     .nav-footer .nav-item {
         width: 100%;
-        text-align: center;
+        text-align: left;
     }
     
     .nav-footer .nav-item a {
